[gd_scene load_steps=2 format=3 uid="uid://clacfnhskqpkh"]

[ext_resource type="Script" path="res://ramires_tech_commons/Interaction/Scripts/interaction_area_3d.gd" id="1_uhlv6"]

[node name="InteractionArea3D" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_uhlv6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
